--- a/tb_visual2.css
+++ b/tb_visual2.css
@@ -6,8 +6,8 @@
    Tutorial Case
    
    Visual Effects Style Sheet for Photo Page at Tree and Book
-   Author:
-   Date:   
+   Author: Christian Gregorio
+   Date:   10.28.18
    
    Filename: tb_visual2.css
 
@@ -19,13 +19,3 @@
 
 
 /* Filter Styles */
-
-
-
-
-
-
-
-
-
-
