--- a/tb_visual1.css
+++ b/tb_visual1.css
@@ -38,6 +38,10 @@ html {
     background-image: url(tb_back1.png);
 }
 
+
+
+/* Article Styles */
+
 article {
     background:
         url(tb_back2.png) bottom right / 15% no-repeat content-box,
@@ -45,18 +49,23 @@ article {
         url(tb_back4.png) 100% / cover no-repeat padding-box;
 }
 
-/* Article Styles */
-
-
-
+article header h1 {
+    text-shadow: rgb(181, 211, 181) 2px 2px 1px, rgba(21, 21, 21, 0.66) 5px 5px 25px;
+}
 
 /* Page Body Styles */
 
-
+body {
+    border-left: 1px solid rgb(51, 51, 51);
+    border-right: 1px solid rgb(51, 51, 51);
+}
 
 
 /* Aside Styles */
-
+aside {
+    border: 4px double rgb(45, 93, 62);
+    border-radius: 30px;
+}
 
 
 /* Footer Styles */
